[package]
name = "area_func"
version = "0.1.1"
authors = ["arsalan.ali"]
edition = "2018"
description = "You can find the area of circle."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arsalanali-26/Area_calculation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
